dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapi-service
spec:
  selector:
    app: my-api
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 31400
