dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  rules:
    - host: "api.com"
      http:
        paths:
          - pathType: Suffix
            path: "/process"
            backend:
              service:
                name: myapi-service
                port:
                  number: 5000
